Update Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="rpbY4EQpbuabtT2" />
+    <meta name="google-site-verification" content="rpbY4EQpbuabtT2IDO5xnki68n4wNeweutwPj60FXK8" />
     <title>SDM Apps - Software per il Business</title>
     <style>
         * {
