Change title from 'SDM Apps' to 'PDP Apps'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="rpbY4EQpbuabtT2IDO5xnki68n4wNeweutwPj60FXK8" />
-    <title>SDM Apps - Software per il Business</title>
+    <title>PDP Apps - Software per il Business</title>
     <style>
         * {
             margin: 0;
