Update contact email and location in footer

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <li>Invio diretto al Ministero del Lavoro</li>
                     <li>Storico completo comunicazioni</li>
                     <li>Gestione multi-azienda</li>
-                    <li>Supporto normativa italiana</li>
+                    <li>Supporto Email nelle Info dell'App</li>
                 </ul>
 
                 <a href="https://play.google.com/store" class="app-button">Scarica su Google Play</a>
@@ -104,8 +104,8 @@
             <div class="footer-section">
                 <h3>Contatti</h3>
                 <ul>
-                    <li>Email: <a href="mailto:assistenzachiamate0@gmail.com">assistenzachiamate0@gmail.com</a></li>
-                    <li>Sede: Alba Adriatica (TE), Italia</li>
+                    <li>Email: <a href="mailto:assistenzachiamate0@gmail.com">assistenza@padiapps.com</a></li>
+                    <li>Sede: Notaresco (TE), Italia</li>
                     <li>P.IVA: 01958870675</li>
                 </ul>
             </div>
