Update legal address and contact email in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -34,9 +34,9 @@
         <h2>1. Titolare del Trattamento</h2>
         <p>
             <strong>Titolare del trattamento:</strong> Paolo Di Panfilo<br>
-            <strong>Sede legale:</strong> Alba Adriatica (TE), Italia<br>
+            <strong>Sede legale:</strong> Notaresco (TE), Italia<br>
             <strong>P.IVA:</strong> 01958870675<br>
-            <strong>Email:</strong> assistenzachiamate0@gmail.com
+            <strong>Email:</strong> assistenza@padiapps.com
         </p>
 
         <h2>2. Dati Raccolti</h2>
