--- a/privacy.html
+++ b/privacy.html
@@ -159,7 +159,7 @@
             <div class="footer-section">
                 <h3>Contatti</h3>
                 <ul>
-                    <li>Email: <a href="mailto:assistenzachiamate0@gmail.com">assistenzachiamate0@gmail.com</a></li>
+                    <li>Email: <a href="mailto:assistenza@padiapps.com">assistenza@padiapps.com</a></li>
                     <li>Sede: Alba Adriatica (TE), Italia</li>
                     <li>P.IVA: 01958870675</li>
                 </ul>
