--- a/terms.html
+++ b/terms.html
@@ -246,8 +246,8 @@
         <h2>15. Contatti e Assistenza</h2>
         <p>Per qualsiasi domanda o richiesta di assistenza:</p>
         <p>
-            <strong>Email:</strong> <a href="mailto:assistenzachiamate0@gmail.com">assistenzachiamate0@gmail.com</a><br>
-            <strong>Sede:</strong> Alba Adriatica (TE), Italia<br>
+            <strong>Email:</strong> <a href="mailto:assistenza@padiapps.com">assistenza@padiapps.com</a><br>
+            <strong>Sede:</strong> Notaresco (TE), Italia<br>
             <strong>P.IVA:</strong> 01958870675
         </p>
 
@@ -281,8 +281,8 @@
             <div class="footer-section">
                 <h3>Contatti</h3>
                 <ul>
-                    <li>Email: <a href="mailto:assistenzachiamate0@gmail.com">assistenzachiamate0@gmail.com</a></li>
-                    <li>Sede: Alba Adriatica (TE), Italia</li>
+                    <li>Email: <a href="mailto:assistenza@padiapps.com">assistenza@padiapps.com</a></li>
+                    <li>Sede: Notaresco (TE), Italia</li>
                     <li>P.IVA: 01958870675</li>
                 </ul>
             </div>
