--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                 <h3>Link Utili</h3>
                 <ul>
                     <li><a href="https://pd15322.github.io/privacy-policy.html/" target="_blank">Privacy Policy</a></li>
-                    <li><a href="https://pd15322.github.io/Termini-e-Condizioni/" target="_blank">Termini e Condizioni</a></li>
+                    <li><a href="terms.html/" target="_blank">Termini e Condizioni</a></li>
                 </ul>
             </div>
 
             <div class="footer-section">
                 <h3>Contatti</h3>
                 <ul>
-                    <li>Email: <a href="mailto:assistenzachiamate0@gmail.com">assistenza@padiapps.com</a></li>
+                    <li>Email: <a href="mailto:assistenza@padiapps.com">assistenza@padiapps.com</a></li>
                     <li>Sede: Notaresco (TE), Italia</li>
                     <li>P.IVA: 01958870675</li>
                 </ul>
