--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h3>Link Utili</h3>
                 <ul>
                     <li><a href="https://pd15322.github.io/privacy-policy.html/" target="_blank">Privacy Policy</a></li>
-                    <li><a href="terms.html/" target="_blank">Termini e Condizioni</a></li>
+                    <li><a href="https://pd15322.github.io/Termini-e-Condizioni/" target="_blank">Termini e Condizioni</a></li>
                 </ul>
             </div>
 
