--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="description" content="PADIApps - Soluzioni software innovative per il business italiano. App professionali per gestire le attività aziendali in modo efficiente.">
     <meta name="keywords" content="app business, software aziendale, chiamate intermittenti, gestione lavoro">
     <title>PADIApps - Soluzioni Software per il Business</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
