Change title and description for PADIApps
Updated the title and description to reflect new focus on intermittent worker calls.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="PADIApps - Soluzioni software innovative per il business italiano. App professionali per gestire le attività aziendali in modo efficiente.">
     <meta name="keywords" content="app business, software aziendale, chiamate intermittenti, gestione lavoro">
-    <title>PADIApps - Soluzioni Software per il Business</title>
+    <title>PADIApps - APP per Chiamata Intermittente</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -82,9 +82,7 @@
                 <h2>Chi Siamo</h2>
             </div>
             <p>
-                <strong>PADIApps</strong> è un'azienda italiana specializzata nello sviluppo di applicazioni mobile per il business. 
-                La nostra missione è fornire soluzioni software professionali che aiutino imprenditori e professionisti 
-                a gestire in modo efficiente le attività quotidiane.
+                <strong>PADIApps</strong> App per gestire le chiamate dei lavoratori intermittenti. Conforme al D.Lgs. 81/2015.
             </p>
             <p>
                 Ogni nostra applicazione è progettata con particolare attenzione alla normativa italiana e alle esigenze 
