Fix title and comment for Chiamata Intermittenti

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="PADIApps - Soluzioni software innovative per il business italiano. App professionali per gestire le attività aziendali in modo efficiente.">
     <meta name="keywords" content="app business, software aziendale, chiamate intermittenti, gestione lavoro">
-    <title>PADIApps - APP per Chiamata Intermittente</title>
+    <title>PADIApps - APP per Chiamata Intermittenti</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -54,7 +54,7 @@
         </div>
 
         <div class="app-showcase">
-            <!-- Chiamate Intermittenti App -->
+            <!-- Chiamata Intermittenti App -->
             <div class="app-card">
                 <div class="app-icon">
                     <img src="chiamate_intermittenti_icon.png" alt="Chiamate Intermittenti" style="width: 80px; height: 80px; border-radius: 15px;">
