Update hero section with title for FoxOrder
Added a closing div for the hero section and a title for FoxOrder.

--- a/index.html
+++ b/index.html
@@ -771,6 +771,7 @@
             </div>
             <div class="hero-visual">
                 <div class="hero-icon-wrapper">
+                    <div style="text-align:center; margin-bottom:16px; font-family:'Playfair Display',serif; font-size:36px; font-weight:800; color:var(--fox-orange);">FoxOrder</div>
                     <img src="foxorder_icon.png" alt="FoxOrder - App Gestione Ristorante">
                 </div>
             </div>
