Update pricing notes and contact email in index.html

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <div class="plan-name">Professional</div>
                 <div class="plan-desc">Per ristoranti con una sala</div>
                 <div class="plan-price"><span class="currency">&euro;</span><span class="amount">170</span><span class="period">/anno</span></div>
-                <div class="plan-price-note">IVA compresa &mdash; risparmi il 38%</div>
+                <div class="plan-price-note">IVA compresa &mdash; risparmi il 38% &mdash; <strong>solo €14,17/mese</strong></div>
                 <ul class="plan-features">
                     <li><span class="check yes">&#10003;</span>Full Cloud — accedi da ovunque</li>
                     <li><span class="check yes">&#10003;</span>1 Sala con 30 Tavoli</li>
@@ -335,7 +335,7 @@
                 <div class="plan-name">Max</div>
                 <div class="plan-desc">Per ristoranti senza limiti</div>
                 <div class="plan-price"><span class="currency">&euro;</span><span class="amount">249</span><span class="period">/anno</span></div>
-                <div class="plan-price-note">IVA compresa &mdash; risparmi il 31%</div>
+                <div class="plan-price-note">IVA compresa &mdash; risparmi il 31% &mdash; <strong>solo €20,75/mese</strong></div>
                 <ul class="plan-features">
                     <li><span class="check yes">&#10003;</span>Full Cloud — accedi da ovunque</li>
                     <li><span class="check yes">&#10003;</span>Sale Illimitate con Tavoli Illimitati</li>
@@ -389,7 +389,7 @@
             <div>
                 <h4>Contatti</h4>
                 <ul>
-                    <li><a href="mailto:assistenza@padiapps.com">assistenza@padiapps.com</a></li>
+                    <li><a href="/cdn-cgi/l/email-protection#f9988a8a908a8d9c978398b989989d909889898ad79a9694"><span class="__cf_email__" data-cfemail="452436362c3631202b3f24053524212c243535366b262a28">[email&#160;protected]</span></a></li>
                     <li class="contact-item">Notaresco (TE), Italia</li>
                     <li class="contact-item">P.IVA: 01958870675</li>
                 </ul>
@@ -400,7 +400,7 @@
         </div>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         const hamburger = document.querySelector('.hamburger');
         const navLinks = document.querySelector('.nav-links');
         hamburger.addEventListener('click', () => navLinks.classList.toggle('active'));
@@ -424,11 +424,3 @@
         }
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-            });
-        });
-    </script>
-</body>
-</html>
