--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <div>
                 <h4>Contatti</h4>
                 <ul>
-                    <li><a href="/cdn-cgi/l/email-protection#f9988a8a908a8d9c978398b989989d909889898ad79a9694"><span class="__cf_email__" data-cfemail="452436362c3631202b3f24053524212c243535366b262a28">[email&#160;protected]</span></a></li>
+                    <li><a href="mailto:info@padiapps.com">info@padiapps.com</a></li>
                     <li class="contact-item">Notaresco (TE), Italia</li>
                     <li class="contact-item">P.IVA: 01958870675</li>
                 </ul>
