--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <div class="footer-inner">
             <div class="footer-brand">
                 <div class="logo-footer">PADIApps</div>
-                <p>Soluzioni software innovative per il business italiano. App professionali per la ristorazione e la gestione aziendale.</p>
+                <p>Soluzioni software innovative per il business. App professionali per la ristorazione e la gestione aziendale.</p>
             </div>
             <div>
                 <h4>Link Utili</h4>
